# Chaos

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  README.md  dockerfile
.devcontainer/: Dockerfile  devcontainer.json
ClusterResourceMonitor/: .gitignore  CMakeLists.txt
ClusterResourceMonitor/include/: base.h  dynamic_info.h  moniter.h  smq.h  static_info.h
ClusterResourceMonitor/include/clusterRM/: base.h  dynamic_info.h  info_parser.h  moniter.h  net_thinker.h  network_info.h  smq.h  smq_meta.h  static_info.h  util.h
ClusterResourceMonitor/src/: dynamic_info.cc  net_thinker.cc  network_info.cc  network_utils.h  smq.cc  static_info.cc  util.cc
ClusterResourceMonitor/tests/: CMakeLists.txt  test_bandwidth.cc  test_dynamic_info.cc  test_info_parser.cc  test_iperf.cc  test_iperf_api.cc  test_net_thinker.cc  test_smq_client.cc  test_smq_server.cc  test_static_info.cc
doc/: CArray.md  ConstelAggEngine.md
docker/: build-base.sh  build-dev.sh  build-release.sh  dockerfile  dockerfile-base  dockerfile-dev
experiment/: start_controller.py  utils.py
experiment/modelsynctime/: docker-compose.yaml  dockerfile  entry_point.sh  expconfig.env  startup.sh  test.py  test_controller.py
experiment/train_acc/: analyze_log.ipynb  analyzer.py  docker-compose.yaml  entry_point.sh  expconfig.env  startup.sh  test.py
include/: constellation.h  constellation_api.h  constellation_commons.h  constellation_controller.h  constellation_thinker.h  constellation_trainer.h  constellation_transtopothinker.h  strategy_exception.h  topo_graph.hpp
include/internal/: CArray.h  engine.h  engine.hpp  serilite.hpp  utils.h
include/internal/serilite/: for_each_internal.h
python/: Makefile  pyproject.toml  setup.py
python/constellation/: __init__.py  base.py  carray.py  controller.py  find_lib_path.py  trainer.py
python/constellation/Trainer/: __init__.py  base.py  trainer.py
python/constellation/pytorch/: Trainer.py
python/tests/: test.py
src/: ConstelTransTopoThinker.cc  constellation_api.cc  constellation_controller.cc  constellation_trainer.cc  network_aware.h  node_overlay_manager.cc  node_overlay_manager.h  topo_graph.hpp
src/algorithm/: algorithm_helper.h  basic.cc  basic.h
src/controller/: constellation_controller.cc  threadsafe_queue.hpp
src/overlay/: node_overlay_manager.cc  node_overlay_manager.h  topo_graph.hpp
src/overlay/network_aware/: network_aware.h
src/thinker/: ConstelTransTopoThinker.cc  ConstelTransTopoThinker.h  FAPTEqualConfThinker.cc  FAPTEqualConfThinker.h  FAPTTimeWeightedConfThinker.cc  FAPTTimeWeightedConfThinker.h  LayerwiseTimeWeightedConfThinker.cc  LayerwiseTimeWeightedConfThinker.h  LayerwiseTimeWeightedTopoOptConfThinker.cc  LayerwiseTimeWeightedTopoOptConfThinker.h  RoundRobinTimeWeightedThiker.cc  RoundRobinTimeWeightedThiker.h  RoundRobinTimeWeightedThinker.cc  RoundRobinTimeWeightedThinker.h  SimpleAdjEqualConfThinker.cc  SimpleAdjEqualConfThinker.h  SimpleAdjTimeWeightedConfThinker.cc  SimpleAdjTimeWeightedConfThinker.h  SimpleEqualConfThinker.cc  SimpleEqualConfThinker.h  SimpleThinker.cc  SimpleThinker.h  SinglePointConfThinker.cc  SinglePointConfThinker.h  constellation_thinker.cc  thinker_factory.cc  thinker_factory.h
src/trainer/: constellation_trainer.cc  engine.hpp  time_recorder.cc  time_recorder.h
src/utils/: serilite.hpp  utils.cc
tests/: CMakeLists.txt  launch.sh  shutdown.sh  test_add_exit.cc  test_migrate.cc  test_pushpull.cc
tests/docker/: .env  docker-compose-dbg.yml  docker-compose.yml
tests/env/: load_env.sh  scheduler.env  scheduler.sh  server.sh  trainer.env  trainer.sh
tests/include/: test_debug_utils.h  test_pushpull_utils.h  test_utils.h  trainer_debug_utils.h
tests/python/: startup.sh  test.py  test_basic.py  test_carray.py  test_controller.py  test_pushpull.py  test_resnet_18.py  test_resnet_18_pretty.py
tests/unit_tests/: CArray_test.cc  algo_test.cc  engine_test.cc  unit_test_main.cc
tests/utils/: docker_tcconfig.sh
